prepare to deploy to fly.io
